# game-programming-25

exercises/: E00_introduction.cpp
playground/: CMakeLists.txt
playground/Game/: MainApp.cpp
playground/Game/Object/: Box.h
playground/Game/Player/: PlayerData.hpp
playground/core/Physics/: physics.cpp  physics.hpp
playground/core/Types/: types.hpp
